--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,4 +1,4 @@
-🔐 Privacy Policy for Super Sudoku
+🔐 Privacy Policy for Roulette Tracker Pro V2
 Effective Date: 22 August 2025
 
 Roulette Tracker Pro V2 ("the App") is developed by Transytion Studios. This Privacy Policy explains how we collect, use, and protect your information when you use the App.
@@ -23,7 +23,7 @@ We take data security seriously. Your email is stored securely using industry-st
 We do not sell, rent, or share your personal information with third parties. Your data is used only within the App for verification purposes.
 
 👶 Children’s Privacy
-Super Sudoku is not intended for children under the age of 13. We do not knowingly collect personal information from children.
+Roulette Tracker Pro is not intended for children under the age of 18. We do not knowingly collect personal information from children.
 
 🌍 International Users
 If you are accessing the App from outside Canada, please note that your information may be stored and processed in Canada or other countries where we or our service providers operate.
